--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
     "@chakra-ui/react": "^2.5.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fontsource/righteous": "^4.5.7",
     "@tanstack/react-query": "^4.28.0",
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.9.1",
     "next": "13.2.4",
-    "next-auth": "^4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.8",
+    "react-icons": "^4.8.0",
+    "swiper": "^9.1.1",
     "typescript": "5.0.2"
   },
   "devDependencies": {
